Inventory and Equipment systems created and functional

--- a/config/font.cfg
+++ b/config/font.cfg
@@ -16,7 +16,7 @@
             "tag":"H1"
         },
         {
-            "font":"fonts/AlbertTextBold.otf",
+            "font":"fonts/Quintessential-Regular.ttf",
             "size":32,
             "tag":"H2"
         },
